--- a/src/Components/Category/Category.css
+++ b/src/Components/Category/Category.css
@@ -3,7 +3,7 @@
 }
 
 .headerName {
-  margin: 0 auto;
+  margin: 50px auto;
   width: 90%;
   color: #1d1f22;
   text-transform: capitalize;
@@ -19,7 +19,12 @@
 }
 
 .card {
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  margin-bottom: 25px;
+  text-decoration: none;
+  position: relative;
+}
+.card:hover {
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
   margin-bottom: 25px;
   text-decoration: none;
 }
@@ -29,7 +34,44 @@
   height: 338px;
   width: 100%;
 }
-
+.overlay{
+  position: absolute;  
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.05);
+  /*z-index: 2;*/
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-size: 32px;
+  color: #8D8F9A;
+}
+.hide_overlay{
+  display: none;
+}
+.hide-add-cart-icon-container{
+  display: none;
+}
+.add-cart-icon-container {
+  position: relative;
+  display: block;
+}
+.add-to-cart1 {
+  position: absolute;
+  right: 0;
+  bottom: 10px;  
+}
+.add-to-cart2{
+  position: absolute;
+  right: 16px;
+  bottom: 25px; 
+}
 .card__content {
   line-height: 28.8px;
   font-weight: 300;
