--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -18,7 +18,7 @@
 
 .nav-link {
   font-weight: bold;
-  font-size: 14px;
+  font-size: 20px;
   text-transform: uppercase;
   text-decoration: none;
   color: #1d1f22;
@@ -70,23 +70,57 @@
   top: 10px;
   left: 10px;
 }
-.navbar a:hover,
+/*.navbar a:hover,
 .dropdown:hover .dropbtn {
   background-color: red;
+}*/
+
+.dropdown{
+  display: flex;
+    position: relative;
+    font-size: 20px;
 }
+
 
 .dropdown-content {
-  display: none;
+  /*display: none;*/
   position: absolute;
-  background-color: #f9f9f9;
+  /*background-color: #f9f9f9;s*/
   right: 10px;
-  top: 60px;
+  /*top: 60px;*/
+  top: 100%;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  /*box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;*/
+  z-index: 2;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 1);
 }
 
-.dropdown-content a {
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+li {
+  padding: 8px 12px;
+}
+
+li:hover {
+  background-color: rgba(0, 0, 0, 0.14);
+  cursor: pointer;
+}
+
+.cart-badge-container{
+  position: relative;
+    display: flex;
+}
+
+
+
+
+
+/*.dropdown-content a {
   float: none;
   color: black;
   padding: 12px 16px;
@@ -97,23 +131,22 @@
 
 .dropdown-content a:hover {
   background-color: #ddd;
-}
+}*/
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
+/*.dropdown:hover .dropdown-content {
   display: block;
-}
+}*/
 .caret.caret-up {
   border-top-width: 0;
   border-bottom: 4px solid #fff;
 }
 .badge {
-  bottom: 10px;
-  /* content: attr(value); */
-  /* font-size: 12px; */
   color: #fff;
-  background: black;
-  border-radius: 50%;
-  padding: 0 5px;
-  position: relative;
+    background: black;
+    border-radius: 50%;
+    padding: 0 5px;
+    position: absolute;
+    top: -5px;
+    left: 20px;
 }
